--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ project(online_traffic_sim)
 
 set(CMAKE_CXX_STANDARD 20)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../emsdk/upstream/emscripten/system/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../emsdk/upstream/emscripten/cache/ports/boost_headers)
+
 add_executable(online_traffic_sim
-        main.cpp)
+        main.cpp
+        json.hpp)
